force-app/main/default/objects/Time_Entry__c/Time_Entry__c.object-meta.xml
<CustomObject>
    <description>Used to capture the implementation team&apos;s billable and non-billable time and assign it to a project</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TIME-{0000000}</displayFormat>
        <label>Time Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>