force-app/main/default/objects/Time_Entry__c/fields/Billable_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Billable_Bucket__c</fullName>
    <description>//TODO Find out what this field is for</description>
    <formula>IF( Is_Billable__c = TRUE, &quot;Yes&quot; , &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Bucket</label>
    <type>Text</type>
</CustomField>