force-app/main/default/objects/Time_Entry__c/fields/Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount__c</fullName>
    <description>The amount that will be billed to the client</description>
    <formula>IF( (User_Name__c = &quot;Rich Callear&quot;), 137.50, 100)</formula>
    <label>Billing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>