force-app/main/default/objects/Time_Entry__c/fields/Calculated_Stop__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Stop__c</fullName>
    <description>Calculated stop time of the time entry, based on start time and duration</description>
    <formula>Start__c + Duration__c/24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Stop</label>
    <type>DateTime</type>
</CustomField>