force-app/main/default/objects/Time_Entry__c/fields/Duration_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Hours__c</fullName>
    <description>How long the time entry was worked on for, converted into hours</description>
    <formula>IF(FLOOR(MOD((Calculated_Stop__c-Start__c)* 24, 24 )) &gt; 0, TEXT(FLOOR(MOD((Calculated_Stop__c-Start__c)* 24, 24 ))) &amp; &quot; H &quot;,&quot;&quot;) 
 &amp; 
TEXT(ROUND(MOD((Calculated_Stop__c-Start__c)* 24 * 60, 60 ), 0)) &amp; &quot; M &quot;
 &amp; 
TEXT(ROUND(MOD((Calculated_Stop__c-Start__c)* 24 * 60*60, 60 ), 0)) &amp; &quot; S&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Hours</label>
    <type>Text</type>
</CustomField>