force-app/main/default/objects/Time_Entry__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <description>Name of the feature the time entry belongs to, based on the lookup to Project Feature on Work Item</description>
    <formula>Work_Item__r.Feature__r.Name</formula>
    <label>Feature Name</label>
    <type>Text</type>
</CustomField>