force-app/main/default/objects/Time_Entry__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox for whether the time entry is billable or not. Default value is true</description>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>