force-app/main/default/objects/Time_Entry__c/fields/Is_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Week__c</fullName>
    <description>//TODO Confirm what this field is for</description>
    <formula>IF( AND(DATEVALUE(Start__c) &gt; (TODAY()-( WEEKDAY( TODAY() ) + 6 ) ),
              DATEVALUE(Start__c) &lt;= (TODAY() - WEEKDAY( TODAY() )  )
              ), 
    TRUE, 
    FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Last Week</label>
    <type>Checkbox</type>
</CustomField>