force-app/main/default/objects/Time_Entry__c/fields/Phase_Name__c.field-meta.xml
<CustomField>
    <fullName>Phase_Name__c</fullName>
    <description>Name of the phase the time entry belongs to, based on the lookup to Project Phase on Work Item</description>
    <formula>Work_Item__r.Project_Phase__r.Name</formula>
    <label>Phase Name</label>
    <type>Text</type>
</CustomField>