force-app/main/default/objects/Time_Entry__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Project Name that the time entry belongs to, based on the master-detail to Project</description>
    <formula>Project__r.Name</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>