force-app/main/default/objects/Time_Entry__c/fields/Project_Resource_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Project_Resource_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>//TODO Find out what this field is for</description>
    <label>Project Resource Assignment</label>
    <referenceTo>Project_Resource_Assignment__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>