force-app/main/default/objects/Time_Entry__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <description>Status of the Project the time entry belongs to</description>
    <formula>TEXT(Project__r.Status__c)</formula>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>