force-app/main/default/objects/Time_Entry__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>//TODO Confirm what this field is for</description>
    <formula>IF(
ISNULL(Project_Resource_Assignment__r.Rate__c),
 Project__r.Proposal_Hourly_Rate__c ,
Project_Resource_Assignment__r.Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>