force-app/main/default/objects/Time_Entry__c/fields/Simple_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Simple_Revenue__c</fullName>
    <description>//TODO Find out what this field is for</description>
    <formula>IF(Is_Billable__c , Duration__c * 125 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Simple Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>