force-app/main/default/objects/Time_Entry__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <description>Time the time entry stopped being worked on</description>
    <label>Stop</label>
    <type>DateTime</type>
</CustomField>