force-app/main/default/objects/Time_Entry__c/fields/Toggl_ID__c.field-meta.xml
<CustomField>
    <fullName>Toggl_ID__c</fullName>
    <description>//TODO DEPRECATED Can be removed once we confirm Toggl can be deleted</description>
    <externalId>true</externalId>
    <label>Toggl ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>