force-app/main/default/objects/Time_Entry__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User to get the user the time entry belongs to</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>