force-app/main/default/objects/Time_Entry__c/fields/User_Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>User_Is_Current_User__c</fullName>
    <description>Checkbox for if the current user logged in is the one the time entry belongs to</description>
    <formula>User__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Is Current User</label>
    <type>Checkbox</type>
</CustomField>