force-app/main/default/objects/Time_Entry__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>Name of user the time entry belongs to</description>
    <formula>User__r.FirstName &amp; &apos; &apos; &amp; User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>