force-app/main/default/objects/Time_Entry__c/fields/Work_Item_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Assigned_To__c</fullName>
    <description>Formula field to get the name of the user the Work Item is assigned to</description>
    <formula>Work_Item__r.Assigned_To__r.FirstName + &quot; &quot; +  Work_Item__r.Assigned_To__r.LastName</formula>
    <label>Work Item Assigned To</label>
    <type>Text</type>
</CustomField>