force-app/main/default/objects/Time_Entry__c/fields/Work_Item_Est_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Est_Time__c</fullName>
    <description>Estimated time the work item will take to complete</description>
    <formula>Work_Item__r.Est_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item Est. Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>