force-app/main/default/objects/Time_Entry__c/fields/Work_Item_Is_Optional__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Is_Optional__c</fullName>
    <description>Checkbox for whether the Work Item is optional</description>
    <formula>Work_Item__r.Is_Optional__c</formula>
    <label>Work Item Is Optional</label>
    <type>Checkbox</type>
</CustomField>