force-app/main/default/objects/Time_Entry__c/fields/Work_Item_No__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_No__c</fullName>
    <description>The Work Item number</description>
    <formula>Work_Item__r.Name</formula>
    <label>Work Item No.</label>
    <type>Text</type>
</CustomField>