force-app/main/default/objects/Time_Entry__c/fields/Work_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Status__c</fullName>
    <description>Status of the Work Item</description>
    <formula>TEXT(Work_Item__r.Status__c)</formula>
    <label>Work Item Status</label>
    <type>Text</type>
</CustomField>