force-app/main/default/objects/Time_Entry__c/fields/Work_Item_Subject__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Subject__c</fullName>
    <description>Subject of the Work Item, which describes what the WI is for</description>
    <formula>Work_Item__r.Subject__c</formula>
    <label>Work Item Subject</label>
    <type>Text</type>
</CustomField>