force-app/main/default/objects/Time_Entry__c/validationRules/Cannot_book_time_to_deployed_work_item.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_book_time_to_deployed_work_item</fullName>
    <active>false</active>
    <errorConditionFormula>(TEXT(Work_Item__r.Status__c) == &apos;Deployed&apos;)</errorConditionFormula>
    <errorMessage>You cannot book time against a deployed work item</errorMessage>
</ValidationRule>