force-app/main/default/objects/Time_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>Stop__c</columns>
    <columns>User__c</columns>
    <columns>Work_Item__c</columns>
    <columns>Is_Billable__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>