force-app/main/default/objects/Time_Entry__c/listViews/My_Time_Entries.listView-meta.xml
<ListView>
    <fullName>My_Time_Entries</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Start__c</columns>
    <columns>Stop__c</columns>
    <columns>Duration__c</columns>
    <columns>Work_Item__c</columns>
    <columns>Project__c</columns>
    <columns>Is_Billable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Time Entries</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>