force-app/main/default/objects/Time_Entry__c/listViews/Orphaned_Time_Entries.listView-meta.xml
<ListView>
    <fullName>Orphaned_Time_Entries</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>Stop__c</columns>
    <columns>User__c</columns>
    <columns>Work_Item__c</columns>
    <columns>Is_Billable__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Item__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Project__c</field>
        <operation>notContain</operation>
        <value>R3</value>
    </filters>
    <label>Orphaned Time Entries</label>
</ListView>